--- a/angular.json
+++ b/angular.json
@@ -73,8 +73,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ywc18-halfhalf:build",
-            "proxyConfig": "src/proxy.conf.json"
+            "browserTarget": "ywc18-halfhalf:build"
           },
           "configurations": {
             "production": {
